fix pricing on mobile

--- a/sass/_pricing.scss
+++ b/sass/_pricing.scss
@@ -2,7 +2,13 @@
     padding-bottom: 200px;
 
     &--heading {
-        width: 700px;
+        max-width: 700px;
+    }
+
+    &-content {
+        @include mq(sm) {
+            overflow: auto;
+        }
     }
 
     &__table {
@@ -20,6 +26,10 @@
 
     &__th {
         padding: 50px;
+
+        @include mq(sm) {
+            padding: 10px;
+        }
     }
 
     &__td {
@@ -27,6 +37,11 @@
         text-transform: uppercase;
         width: 25%;
         padding: 25px 50px;
+
+        @include mq(sm) {
+            padding: 10px;
+            font-size: 13rem;
+        }
     }
 
     &__td {
@@ -54,6 +69,12 @@
         border-radius: 4px;
         padding: 15px 25px;
         font-weight: 600;
+
+        @include mq(sm) {
+            padding: 10px;
+            width: 100px;
+            font-size: 13rem;
+        }
     }
 
     &__span {
